<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_icon_1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">


        <EditText

            android:id="@+id/edtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/studentCode"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            android:textColor="#FFFFFFFF"
            android:background="@drawable/border_edittext"
            android:singleLine="true"
            android:drawableLeft="@drawable/person_26"
            android:drawablePadding="10dp"
            android:maxLength="50"
            />
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#FFFFFFFF"
            android:textSize="24sp"
            android:layout_marginTop="80dp"
            android:background="@drawable/border_edittext"
            android:drawableLeft="@drawable/lock_26"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/eye_26"
            android:singleLine="true"
            android:maxLength="50"/>
        <!--<CheckBox
            android:id="@+id/chkShowPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="Hiển thị mật khẩu"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="140dp"/>-->


    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_bg_login">

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:gravity="center"-->
<!--            android:padding="10dp"-->
<!--            android:text="@string/forgotPassword"-->
<!--            android:textColor="#3F51B5"-->
<!--            android:textSize="15sp"-->
<!--            android:textStyle="bold" />-->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="24sp"
            android:padding="12dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/background"
            android:textColor="@color/white"

            />

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword"
            android:textSize="24sp"
            android:textColor="#F28B4A"
            android:padding="12dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFFFFF"
            app:strokeColor="@color/background"
            app:strokeWidth="3dp"/>



    </LinearLayout>

</LinearLayout>